Added icons and button to change temp format

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         <button id="search-btn">Search</button>
     </div>
     <div id="container">
-        <img src="#" id="icon">
-        <p id="temp"></p>
+        <img src="#" alt="" id="icon">
+        <div id="temp-container">
+            <p id="temp"></p>
+        </div>
         <p id="conditions"></p>
     </div>
     <script src="script.js"></script>
